--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sa
 /* Eingeklappt: nur blaues Icon */
 .flyout-toggle{
   position: fixed;
-  right: 0px;
+  right: 70px;
   bottom: 50%;
   width: 64px;
   height: 64px;
@@ -99,8 +99,13 @@ body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sa
   transition: transform .2s ease, opacity .2s ease, visibility .2s;
   z-index: 9998;
 }
-.toggle__icon{ width: 64px; height: 64px; display:block;
+.toggle__icon{ 
+  width: 140px; 
+  height: 140px; 
+  display:block;
   filter: drop-shadow(0 10px 22px rgba(0,0,0,.18));
+  background-color: #FFFFFF;
+  padding: 20px
 }
 .flyout-toggle.is-hidden{ opacity:0; visibility:hidden; transform:scale(.9); }
 .flyout.is-hidden{ opacity:0; visibility:hidden; transform:translateX(12px); }
